--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "test:coverage": "vitest --coverage"
     },
     "dependencies": {
+        "@stripe/stripe-js": "^8.1.0",
         "@tailwindcss/forms": "^0.5.7",
         "@tailwindcss/typography": "^0.5.10",
         "autoprefixer": "^10.4.16",
